--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,25 @@
-APP_NAME=Vristo
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_NAME=AVE
+APP_ENV=production
+APP_KEY=base64:8+tqE7rYOIVQ6XJ0P91aWtcbsmOs5JyKgVJtgbN5HEU=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27017
+MONGODB_DATABASE=ave
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=breeze
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=sosi
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
